# download-manager

./: .gitignore  run.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/database/: mod.rs  sqlite.rs
backend/src/downloader/: aria2_handler.rs  http_downloader.rs  mod.rs
backend/src/models/: download_task.rs  mod.rs
backend/src/queue/: download_manager.rs  mod.rs
frontend/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
