[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["stream"] }

futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4"] }

rusqlite = { version = "0.37", features = ["bundled"] }

axum = "0.8"

anyhow = "1"

indicatif = "0.18"

tracing = "0.1"
tracing-subscriber = "0.3"
